# cooking-recipe-url

./: .gitignore  CLAUDE.md  README.md
.cursor/commands/: commit-push.md
.cursor/rules/: cloudflare-workers.mdc  project-general.mdc  python.mdc  supabase.mdc  typescript-react.mdc
docs/: requirements.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  wrangler.toml
frontend/app/: layout.tsx  page.tsx
frontend/components/: RecipeCard.tsx  RecipeList.tsx
frontend/lib/: api.ts  supabase.ts
frontend/public/: .gitkeep
scripts/: .env.example  README.md  classifier.py  collector.py  discord_client.py  pyproject.toml  requirements.txt  scraper.py
supabase/: README.md  schema.sql
workers/: .gitignore  README.md  package-lock.json  package.json  schema.sql  wrangler.toml
workers/scripts/: migrate-from-supabase.ts  tsconfig.json
workers/src/: index.ts
workers/src/repositories/: recipe.ts
workers/src/services/: classifier.ts  discord.ts  scraper.ts
workers/src/types/: index.ts
