[project]
name = "recipe-collector"
version = "1.0.0"
description = "Discord recipe URL collector with AI classification"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "discord-py>=2.3.2",
    "lxml>=4.9.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "supabase>=2.21.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = []
